updated sponsor style

--- a/index.html
+++ b/index.html
@@ -231,7 +231,7 @@
                 <ul class="media-list" style="height: 700px">
                     <li class="media">
                         <a class="pull-left" href="http://www.Perficient.com" target="_blank">
-                            <img class="media-object img-rounded shadow" src="img/Perficient.jpg">
+                            <img class="media-object" src="img/Perficient.jpg">
                         </a>
                         <div class="media-body">
                             <h4 class="media-heading">Perficient</h4>
@@ -246,7 +246,7 @@
                     </li>
                     <li class="media">
                         <a class="pull-left" href="http://www.latechpark.com/" target="_blank">
-                            <img class="media-object img-rounded shadow" src="img/LaTechPark Logo.jpg">
+                            <img class="media-object" src="img/LaTechPark Logo.jpg">
                         </a>
                         <div class="media-body">
                             <h4 class="media-heading">Louisiana Technology Park</h4>
