updated speaker section

--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-﻿<!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="utf-8">
@@ -166,8 +166,8 @@
                             <h4 class="media-heading">Ryan Duclos</h4>
                             <h5>Lead Technical Consultant, Perficient</h5>
                             <p>
-                                Ryan Duclos is a Senior Technical Consultant for <a href="http://www.perficient.com/" target="_blank">Perficient, Inc. (PRFT)</a>, where he is passionate about Microsoft development utilizing the .Net Framework, SQL Server, and Windows Azure technologies. He lives and works in LA (Lower Alabama!) and loves spending time with his family, as well as being a Community Influencer for Microsoft. Ryan also loves to play Disc Golf!
-                            
+                                Ryan Duclos is a Lead Technical Consultant for <a href="http://www.perficient.com/" target="_blank">Perficient, Inc. (PRFT)</a>, where he is passionate about Microsoft development utilizing the .Net Framework, SQL Server, and Windows Azure technologies. He lives and works in LA (Lower Alabama!) and loves spending time with his family, as well as being a Community Influencer for Microsoft. Ryan also loves to play Disc Golf!
+
                                 Ryan is the President of the <a href="http://lanug.net/" target="_blank">Lower Alabama .NET User Group</a> and is also involved with the <a href="http://pensacola.sqlpass.org/" target="_blank">Gulf Coast SQL Server User Group</a>. In addition Ryan is a frequent speaker at numerous Code Camps, SQL Saturdays &amp; User Group events.
                             </p>
                         </div>
@@ -237,9 +237,9 @@
                             <h4 class="media-heading">Perficient</h4>
                             <p>
                                 Perficient is a leading information technology consulting firm serving Global 2000 and enterprise customers throughout North America. With nearly 2,000 technology and business consultants, Perficient serves clients from a network of offices across North and three offshore locations, in Eastern Europe, India, and China.
-  
+
                                 Perficient is an award winning leader in the social business space delivering solutions across the breadth of Microsoft technologies with key a focus on SharePoint as a delivery and integration platform, Microsoft BI using the Gartner Framework, Office 365, Lync Voice, Dynamics CRM and supporting infrastructure. Perficient leverages our other partner relationships to deliver integrated solutions and value to our clients.
- 
+
                                 You can find us on the web at <a href="http://www.Perficient.com" target="_blank">http://www.Perficient.com</a>, <a href="http://blogs.perficient.com/microsoft/" target="_blank">http://blogs.perficient.com/microsoft</a>, <a href="http://Facebook.com/Perficient" target="_blank">Facebook.com/Perficient</a> &amp; follow us on Twitter at <a href="http://twitter.com/Perficient" target="_blank">@Perficient</a> &amp; <a href="http://twitter.com/Perficient_MSFT" target="_blank">@Perficient_MSFT</a>.
                             </p>
                         </div>
@@ -252,7 +252,7 @@
                             <h4 class="media-heading">Louisiana Technology Park</h4>
                             <p>
                                 The Louisiana Technology Park is one of the South's premier business incubators providing high-tech start-up companies with the resources to bring their products and services to market faster and more effectively.
-                                
+
                                 If the word “incubation” brings to mind a warm, nurturing environment developed to protect a small, delicate creation, you’re only half right. Sure, The Louisiana Technology Park’s business incubator provides the resources to help foster young start-up companies’ growth so they can enter the “real world” prepared. However, rather than just a “nurturing environment,” we like to think of incubation as injecting our member companies with instant business enhancers and providing product and service supplements to speed growth all while surrounding them with the resources and professional expertise most start-ups can only dream about. That is, if they had time to dream, and weren’t so concerned about overhead, financing, accounting, administration and flat out failure.
                             </p>
                         </div>
