updated venue and speaker image

--- a/index.html
+++ b/index.html
@@ -183,6 +183,7 @@
                         <h2>
                             <a href="http://www.bing.com/maps/Default.aspx?encType=1&v=2&ss=ypid.YN372x233868783&style=r&mkt=en-us&FORM=LLDP" target="_blank">
                                 <span>Louisiana Technology Park<br />
+                                    Suite #301, U Room<br />
                                     7117 Florida Boulevard<br />
                                     Baton Rouge, LA  70806<br />
                                 </span>
