--- a/index.html
+++ b/index.html
@@ -18,6 +18,8 @@
             -moz-box-shadow: 0 0 5px 5px #888;
             -webkit-box-shadow: 0 0 5px 5px#888;
             box-shadow: 0 0 5px 5px #888;
+            height: 192px;
+            width: 191px;
         }
     </style>
     <link href="css/bootstrap-responsive.min.css" rel="stylesheet">
@@ -160,7 +162,7 @@
                 <ul class="media-list">
                     <li class="media">
                         <a class="pull-left" href="http://about.me/rduclos" target="_blank">
-                            <img class="media-object img-rounded shadow" src="img/RyanDuclos.jpg">
+                            <img class="media-object img-polaroid shadow" src="img/RyanDuclos.jpg">
                         </a>
                         <div class="media-body">
                             <h4 class="media-heading">Ryan Duclos</h4>
@@ -229,7 +231,9 @@
         <section id="sponsors">
             <div class="page-header">
                 <h1>Sponsors</h1>
-                <ul class="media-list" style="height: 700px">
+                <br />
+                <h2>Local</h2>
+                <ul class="media-list">
                     <li class="media">
                         <a class="pull-left" href="http://www.Perficient.com" target="_blank">
                             <img class="media-object" src="img/Perficient.jpg">
@@ -259,6 +263,98 @@
                         </div>
                     </li>
                 </ul>
+                <br />
+                <h2>Global</h2>
+                <table width="80%" border="0">
+                    <tbody>
+                        <tr>
+                            <td>
+                                <p align="center">
+                                    <a href="http://www.microsoft.com">
+                                        <img alt="Microsoft" src="img/Microsoft.png" width="200" height="57" border="0" />
+                                    </a>
+                                </p>
+                            </td>
+                            <td>
+                                <p align="center">
+                                    <a href="http://www.jetbrains.com">
+                                        <img alt="JetBrains" src="img/JetBrains.png" width="149" height="57" border="0" />
+                                    </a>
+                                </p>
+                            </td>
+                            <td>
+                                <p align="center">
+                                    <a href="https://www.bluesyntax.net/backup20.aspx">
+                                        <img alt="BlueSyntax" src="img/BlueSyntax.png" width="240" height="57" border="0" />
+                                    </a>
+                                </p>
+                            </td>
+                        </tr>
+                        <tr>
+                            <td>
+                                <p align="center">
+                                    <a href="http://www.pluralsight.com">
+                                        <img alt="Pluralsight" src="img/PluralSight.png" width="220" height="51" border="0" />
+                                    </a>
+                                </p>
+                            </td>
+                            <td>
+                                <p align="center">
+                                    <a href="http://www.telerik.com">
+                                        <img alt="Telerik" src="img/Telerik.png" width="210" height="54" border="0" />
+                                    </a>
+                                </p>
+                            </td>
+                            <td>
+                                <p align="center">
+                                    <a href="http://www.cerebrata.com/">
+                                        <img alt="cerebrata-logo" src="img/cerebrata.png" width="300" height="61" border="0" />
+                                    </a>
+                                </p>
+                            </td>
+                        </tr>
+                        <tr>
+                            <td>
+                                <p align="center">
+                                    <a href="http://www.myget.org">
+                                        <img alt="MyGet" src="img/MyGet.png" width="156" height="50" border="0" />
+                                    </a>
+                                </p>
+                            </td>
+                            <td>
+                                <p align="center">
+                                    <a href="http://www.cloudberrylab.com/azure-tools.aspx " target="_blank">
+                                        <img alt="horizontal_cloudberry_logo_small" src="img/CloudBeryLab.png" width="231" height="70" border="0" />
+                                    </a>
+                                </p>
+                            </td>
+                            <td>
+                                <p align="center">
+                                    <a href="http://www.paraleap.com" target="_blank">
+                                        <img alt="AzureWatchLogo" src="img/AzureWatch.png" width="300" height="40" border="0" />
+                                    </a>
+                                </p>
+                            </td>
+                        </tr>
+                        <tr>
+                            <td>
+                                <p align="center">
+                                    <a href="https://zud.io/">
+                                        <img alt="Zud.io" src="img/zudiologo.png" width="260" height="106" border="0" />
+                                    </a>
+                                </p>
+                            </td>
+                            <td>
+                                <p align="center">
+                                    <a title="Inner Workings!" href="https://www.innerworkings.com/" target="_blank">
+                                        <img alt="InnerWorkings" src="img/InnerWorkings.jpg" width="300" height="60" />
+                                    </a>
+                                </p>
+                            </td>
+                            <td></td>
+                        </tr>
+                    </tbody>
+                </table>
             </div>
         </section>
     </div>
