--- a/index.html
+++ b/index.html
@@ -21,6 +21,15 @@
             height: 192px;
             width: 191px;
         }
+        .auto-style1 {
+            color: #FF0000;
+        }
+        .auto-style2 {
+            width: 139px;
+        }
+        .auto-style3 {
+            width: 125px;
+        }
     </style>
     <link href="css/bootstrap-responsive.min.css" rel="stylesheet">
     <link href="css/bootswatch.css" rel="stylesheet">
@@ -105,52 +114,87 @@
         </section>
         <section id="schedule">
             <div class="page-header">
-                <h1>Schedule (TBD)</h1>
+                <h1>Schedule</h1>
+                <h5 class="auto-style1">During the event the schedule may not strictly adhere to the timeboxes below. </h5>
                 <table class="table table-bordered">
                     <thead>
                         <tr>
-                            <th>Time</th>
-                            <th>Session</th>
+                            <th class="auto-style2">Time</th>
+                            <th class="auto-style3">Session</th>
                             <th>Details</th>
-                            <th>Speaker</th>
                         </tr>
                     </thead>
                     <tbody>
                         <tr class="info">
-                            <td>9:00 - 9:30</td>
-                            <td colspan="3" align="center">Welcome &amp; Introductions</td>
-                        </tr>
-                        <tr class="success">
-                            <td>&nbsp;</td>
-                            <td>&nbsp;</td>
-                            <td>&nbsp;</td>
-                            <td>&nbsp;</td>
-                        </tr>
-                        <tr class="success">
-                            <td>&nbsp;</td>
-                            <td>&nbsp;</td>
-                            <td>&nbsp;</td>
-                            <td>&nbsp;</td>
+                            <td class="auto-style2">8:30am - 9:00am</td>
+                            <td colspan="2" align="center">Arrival &amp; Registration</td>
                         </tr>
                         <tr class="info">
-                            <td>&nbsp;</td>
-                            <td colspan="3" align="center">Lunch</td>
+                            <td class="auto-style2">9:00am - 9:15am</td>
+                            <td colspan="2" align="center">Welcome &amp; Introductions</td>
                         </tr>
                         <tr class="success">
-                            <td>&nbsp;</td>
-                            <td>&nbsp;</td>
-                            <td>&nbsp;</td>
-                            <td>&nbsp;</td>
+                            <td class="auto-style2">9:15am - 10:15am</td>
+                            <td class="auto-style3">Overview</td>
+                            <td>
+                                This presentation provides an overview of the Windows Azure. After this presentation you will understand the key concepts and how to get started using Windows Azure.
+                            </td>
                         </tr>
                         <tr class="success">
-                            <td>&nbsp;</td>
-                            <td>&nbsp;</td>
-                            <td>&nbsp;</td>
-                            <td>&nbsp;</td>
+                            <td class="auto-style2">10:15am - 11:15am</td>
+                            <td class="auto-style3">Data</td>
+                            <td>
+                                Every application needs to store and manage data. In this session, you will get a firsthand look at the complete set of scalable and highly available data services including Windows Azure Storage and SQL Databases. You’ll see how you can effectively use these services to build, migrate, and extend data-centric applications in the cloud while using familiar tools.
+                            </td>
+                        </tr>
+                        <tr class="success">
+                            <td class="auto-style2">11:15am - 11:45am</td>
+                            <td class="auto-style3">Web Sites</td>
+                            <td>
+                                Windows Azure Web Sites is a simple, yet powerful platform for web applications in the cloud. In this session you will see how you can build and deploy everything from Wordpress blogs to high-scale web applications using your favorite languages, frameworks, and tools.
+                            </td>
+                        </tr>
+                        <tr class="success">
+                            <td class="auto-style2">11:45am - 12:30am</td>
+                            <td class="auto-style3">Labs</td>
+                            <td>
+                                Lab options: Exploring Storage, Intro SQL Database, ASP.NET Azure Web Sites, other labs related to the previous content!
+                            </td>
                         </tr>
                         <tr class="info">
-                            <td>4:30 - 5:00</td>
-                            <td colspan="3" align="center">Q&A and Wrap-up</td>
+                            <td class="auto-style2">12:30pm - 1:00pm</td>
+                            <td colspan="2" align="center">Lunch</td>
+                        </tr>
+                        <tr class="success">
+                            <td class="auto-style2">1:00pm - 2:00pm</td>
+                            <td class="auto-style3">Cloud Services</td>
+                            <td>
+                                In this presentation, you will learn how to build and deploy powerful and scalable applications using Windows Azure Cloud Services.  You will see several exciting new features such as TFS integration and co-located cache.  Finally, you will also be introduced to several application services such as the Windows Azure Service Bus and Access Control Services.
+                            </td>
+                        </tr>
+                        <tr class="success">
+                            <td class="auto-style2">2:00pm - 2:30am</td>
+                            <td class="auto-style3">Labs</td>
+                            <td>
+                                Lab options: Intro to Cloud Services, other labs related to the previous content!
+                            </td>
+                        </tr>
+                        
+                        <tr class="success">
+                            <td class="auto-style2">2:30pm - 3:00pm</td>
+                            <td class="auto-style3">Render Lab</td>
+                            <td>
+                                We will all be deploying bots in a BIG render farm as a shared workload on Windows Azure. Information about keeping the instances running until X-time local time for each location. Some locations start in earlier time zones than others. Alan will demo in a video what the workload does and why. Also each location that has a Kinect - start recording some local render jobs.
+                            </td>
+                        </tr>
+                        <tr class="success">
+                            <td class="auto-style2">4:00pm - 5:00pm</td>
+                            <td class="auto-style3">Labs</td>
+                            <td>Open Lab time! You decide which labs you want to work on! We will be here to help as much as we can!</td>
+                        </tr>
+                        <tr class="info">
+                            <td class="auto-style2">5:00pm - 5:30pm</td>
+                            <td colspan="2" align="center">Q&A and Wrap-up</td>
                         </tr>
                     </tbody>
                 </table>
