--- a/index.html
+++ b/index.html
@@ -30,6 +30,17 @@
         .auto-style3 {
             width: 125px;
         }
+        .auto-style4 {
+            width: 224px;
+        }
+        .auto-style5 {
+            width: 125px;
+            font-weight: normal;
+        }
+        .auto-style6 {
+            width: 224px;
+            font-weight: normal;
+        }
     </style>
     <link href="css/bootstrap-responsive.min.css" rel="stylesheet">
     <link href="css/bootswatch.css" rel="stylesheet">
@@ -57,6 +68,7 @@
                             <li><a href="#prereq">Pre-Requisites</a></li>
                             <li><a href="#registration">Registration</a></li>
                             <li><a href="#sponsors">Sponsors</a></li>
+                            <li><a href="#giveaways">Giveaways</a></li>
                         </ul>
                     </div>
                 </div>
@@ -179,7 +191,6 @@
                                 Lab options: Intro to Cloud Services, other labs related to the previous content!
                             </td>
                         </tr>
-                        
                         <tr class="success">
                             <td class="auto-style2">2:30pm - 3:00pm</td>
                             <td class="auto-style3">Render Lab</td>
@@ -274,9 +285,7 @@
         </section>
         <section id="sponsors">
             <div class="page-header">
-                <h1>Sponsors</h1>
-                <br />
-                <h2>Local</h2>
+                <h1>Local Sponsors</h1>
                 <ul class="media-list">
                     <li class="media">
                         <a class="pull-left" href="http://www.Perficient.com" target="_blank">
@@ -307,95 +316,158 @@
                         </div>
                     </li>
                 </ul>
-                <br />
-                <h2>Global</h2>
-                <table width="80%" border="0">
+            </div>
+        </section>
+        <section id="giveaways">
+            <div class="page-header">
+                <h1>Global Sponsors / Giveaways</h1>
+                <table class="table table-bordered">
+                    <thead>
+                        <tr>
+                            <th class="auto-style6" style="width:30%;"><h4>Sponsor</h4></th>
+                            <th class="auto-style5"><h4>Giveaways</h4></th>
+                        </tr>
+                    </thead>
                     <tbody>
                         <tr>
-                            <td>
+                            <td class="auto-style4">
                                 <p align="center">
                                     <a href="http://www.microsoft.com">
                                         <img alt="Microsoft" src="img/Microsoft.png" width="200" height="57" border="0" />
                                     </a>
                                 </p>
                             </td>
-                            <td>
+                            <td class="auto-style3"><strong>Azure branded journals! Some funding and the Technology were going to be talking about!</strong></td>
+                        </tr>
+                        <tr>
+                            <td class="auto-style4">
                                 <p align="center">
                                     <a href="http://www.jetbrains.com">
                                         <img alt="JetBrains" src="img/JetBrains.png" width="149" height="57" border="0" />
                                     </a>
                                 </p>
                             </td>
-                            <td>
-                                <p align="center">
-                                    <a href="https://www.bluesyntax.net/backup20.aspx">
-                                        <img alt="BlueSyntax" src="img/BlueSyntax.png" width="240" height="57" border="0" />
-                                    </a>
-                                </p>
+                            <td class="auto-style3">
+                                <strong>ONE (1) winner gets a license of one of their products. The winner may choose from ReSharper, dotTrace, dotCover, PhpStorm, PyCharm, IntelliJ IDEA, AppCode, WebStorm.
+                            </strong>
                             </td>
                         </tr>
                         <tr>
-                            <td>
+                            <td class="auto-style4">
                                 <p align="center">
                                     <a href="http://www.pluralsight.com">
                                         <img alt="Pluralsight" src="img/PluralSight.png" width="220" height="51" border="0" />
                                     </a>
                                 </p>
                             </td>
-                            <td>
+                            <td class="auto-style3">
+                                <strong>
+                                    ONE (1) winner will get a 1 Year Annual Subscription.
+                                    <br />
+                                    ALL Attendees will get a 7 Day training pass via an unique code.
+                                </strong>
+                            </td>
+                        </tr>
+                        <tr>
+                            <td class="auto-style4">
                                 <p align="center">
                                     <a href="http://www.telerik.com">
                                         <img alt="Telerik" src="img/Telerik.png" width="210" height="54" border="0" />
                                     </a>
                                 </p>
                             </td>
-                            <td>
+                            <td class="auto-style3"><strong>ONE (1) winner will get a DevCraft Complete (all their products).</strong></td>
+                        </tr>
+                        <tr>
+                            <td class="auto-style4">
                                 <p align="center">
                                     <a href="http://www.cerebrata.com/">
                                         <img alt="cerebrata-logo" src="img/cerebrata.png" width="300" height="61" border="0" />
                                     </a>
                                 </p>
                             </td>
+                            <td class="auto-style3">
+                                <strong>ALL Attendees will get a license to the new Azure Management Studio product. There will be an email address they can use to request it.
+                            </strong>
+                            </td>
                         </tr>
                         <tr>
-                            <td>
+                            <td class="auto-style4">
+                                <p align="center">
+                                    <a href="https://www.bluesyntax.net/backup20.aspx">
+                                        <img alt="BlueSyntax" src="img/BlueSyntax.png" width="240" height="57" border="0" />
+                                    </a>
+                                </p>
+                            </td>
+                            <td class="auto-style3"><strong>ONE (1) winner will win a Cloud Backup Advanced Edition license.</strong></td>
+                        </tr>
+                        <tr>
+                            <td class="auto-style4">
                                 <p align="center">
                                     <a href="http://www.myget.org">
                                         <img alt="MyGet" src="img/MyGet.png" width="156" height="50" border="0" />
                                     </a>
                                 </p>
                             </td>
-                            <td>
+                            <td class="auto-style3">
+                                <strong>
+                                    ONE (1) winner will win a 1 year Starter Subscription
+                                    <br />
+                                    ALL Attendees will get a 1 month starter subscription redeemable via an online sign up form.
+                                </strong>
+                            </td>
+                        </tr>
+                        <tr>
+                            <td class="auto-style4">
                                 <p align="center">
                                     <a href="http://www.cloudberrylab.com/azure-tools.aspx " target="_blank">
                                         <img alt="horizontal_cloudberry_logo_small" src="img/CloudBeryLab.png" width="231" height="70" border="0" />
                                     </a>
                                 </p>
                             </td>
-                            <td>
+                            <td class="auto-style3">
+                                <strong>
+                                    FIVE (5) winners will win a Cloud Berry Explorer License
+                                    <br />
+                                    FIVE (5) winners will win a Cloud Berry Drive License
+                                </strong>
+                            </td>
+                        </tr>
+                        <tr>
+                            <td class="auto-style4">
                                 <p align="center">
                                     <a href="http://www.paraleap.com" target="_blank">
                                         <img alt="AzureWatchLogo" src="img/AzureWatch.png" width="300" height="40" border="0" />
                                     </a>
                                 </p>
                             </td>
+                            <td class="auto-style3"><strong>ALL Attendees will get a free 30 day unlimited license, redeemable via an unique code.</strong></td>
                         </tr>
                         <tr>
-                            <td>
-                                <p align="center">
-                                    <a href="https://zud.io/">
-                                        <img alt="Zud.io" src="img/zudiologo.png" width="260" height="106" border="0" />
-                                    </a>
-                                </p>
-                            </td>
-                            <td>
+                            <td class="auto-style4">
                                 <p align="center">
                                     <a title="Inner Workings!" href="https://www.innerworkings.com/" target="_blank">
                                         <img alt="InnerWorkings" src="img/InnerWorkings.jpg" width="300" height="60" />
                                     </a>
                                 </p>
                             </td>
-                            <td></td>
+                            <td class="auto-style3"><strong>ALL Attendees will get 90 days Free Training, redeemable online.</strong></td>
+                        </tr>
+                        <tr>
+                            <td class="auto-style4">
+                                <p align="center">
+                                    <a href="https://zud.io/">
+                                        <img alt="Zud.io" src="img/zudiologo.png" width="190" height="56" border="0" />
+                                    </a>
+                                </p>
+                            </td>
+                            <td class="auto-style3">
+                                <strong>
+                                    ALL Attendees will get a 3 month free trial redeemable via an unique code.
+                                    <br />
+                                    ALL Organizers will get a 1 year subscription.
+                                </strong>
+                            </td>
                         </tr>
                     </tbody>
                 </table>
