added "Useful Links" section

--- a/index.html
+++ b/index.html
@@ -69,6 +69,7 @@
                             <li><a href="#registration">Registration</a></li>
                             <li><a href="#sponsors">Sponsors</a></li>
                             <li><a href="#giveaways">Giveaways</a></li>
+                            <li><a href="#links">Useful Links</a></li>
                         </ul>
                     </div>
                 </div>
@@ -471,6 +472,42 @@
                         </tr>
                     </tbody>
                 </table>
+            </div>
+        </section>
+        <section id="links">
+            <div class="page-header">
+                <h1>Useful Links</h1>
+                <br />
+                <div>
+                    <ul>
+                        <li><h4><a href="content/Materials.zip">Presentation Materials</a></h4></li>
+                        <li><h4><a href="http://manage.windowsazure.com/" target="_blank">Windows Azure Management Portal</a></h4></li>
+                        <li>
+                            <h4><a href="https://github.com/WindowsAzure-TrainingKit" target="_blank">GitHub - Training Kit</a></h4>
+                            <br />
+                        </li>
+                        <li><h4>Render Lab:</h4>
+                            <ul>
+                                <li><h5><a href="http://www.youtube.com/watch?v=2rXdyd9LcVU" target="_blank">Lab Background</a> (video)</h5></li>
+                                <li><h5><a href="http://www.youtube.com/watch?v=9YbFNEo6k-4" target="_blank">Overview</a> (video)</h5></li>
+                                <li><h5><a href="http://www.youtube.com/watch?v=zl9Xu1QiZTY" target="_blank">Configuring and Deploying</a> (video)</h5></li>
+                                <li><h5><a href="http://www.youtube.com/watch?v=F9iCJxAxzvk" target="_blank">Capturing and Uploading Animations</a> (video)</h5></li>
+                                <li><h5><a href="http://renderlab.azurewebsites.net/" target="_blank">Animations | Statistics | Metrics</a></h5></li>
+                                <li><h5><a href="https://renderlabencoding.blob.core.windows.net/bits/RenderLab.zip">Materials</a> (zip)</h5></li>
+                            </ul>
+                            <br />
+                        </li>
+                        <li><h4>Social Links:</h4>
+                            <ul>
+                                <li><h5><a href="http://bit.ly/gwabjabbr" target="_blank">Jabbr.NET</a></h5></li>
+                                <li><h5><a href="http://bit.ly/gwabflickr" target="_blank">Flickr</a></h5></li>
+                                <li><h5><a href="http://bit.ly/gwabtwitter" target="_blank">Twitter</a></h5></li>
+                                <li><h5><a href="http://bit.ly/gwabfacebook" target="_blank">Facebook</a></h5></li>
+                            </ul>
+                            <br />
+                        </li>
+                    </ul>
+                </div>
             </div>
         </section>
     </div>
