--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
                 </tr>
                 <td>
                     <div class="page-header" align="center">
-                        <h1><a href="http://www.bing.com/maps/Default.aspx?encType=1&v=2&ss=ypid.YN372x233868783&style=r&mkt=en-us&FORM=LLDP" target="_blank">Baton Rouge, LA</a> (In-Progress)</h1>
+                        <h1><a href="http://www.bing.com/maps/Default.aspx?encType=1&v=2&ss=ypid.YN372x233868783&style=r&mkt=en-us&FORM=LLDP" target="_blank">Baton Rouge, LA</a></h1>
                     </div>
                 </td>
             </table>
