--- a/index.html
+++ b/index.html
@@ -41,6 +41,10 @@
             width: 224px;
             font-weight: normal;
         }
+        .auto-style7 {
+            color: #CC0000;
+            font-size: xx-large;
+        }
     </style>
     <link href="css/bootstrap-responsive.min.css" rel="stylesheet">
     <link href="css/bootswatch.css" rel="stylesheet">
@@ -81,12 +85,13 @@
             <table align="center">
                 <tr>
                     <td>
-                        <img src="img/bootcamp.png" style="width: 600px; height: 500px" />
+                        <img src="img/bootcamp.png" style="width: 511px; height: 347px" />
                     </td>
                 </tr>
                 <td>
                     <div class="page-header" align="center">
                         <h1><a href="http://www.bing.com/maps/Default.aspx?encType=1&v=2&ss=ypid.YN372x233868783&style=r&mkt=en-us&FORM=LLDP" target="_blank">Baton Rouge, LA</a></h1>
+                        <p class="auto-style7"><strong>This event has past!</strong></p>
                     </div>
                 </td>
             </table>
